--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=14.17.0"
   }
 }
